--- a/web/app/themes/vitaminaweb/resources/assets/config.json
+++ b/web/app/themes/vitaminaweb/resources/assets/config.json
@@ -8,7 +8,7 @@
       "./scripts/customizer.js"
     ]
   },
-  "publicPath": "/app/themes/vitaminaweb",
+  "publicPath": "/wp-content/themes/vitaminaweb",
   "devUrl": "http://vitaminaweb.local",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
